--- a/example_files/API_examples.ipynb
+++ b/example_files/API_examples.ipynb
@@ -133,180 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'yfinance'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01myfinance\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01myf\u001b[39;00m\n\u001b[32m      2\u001b[39m microsoft = yf.download(\n\u001b[32m      3\u001b[39m     tickers = \u001b[33m'\u001b[39m\u001b[33mMSFT\u001b[39m\u001b[33m'\u001b[39m, \n\u001b[32m      4\u001b[39m     start=\u001b[33m'\u001b[39m\u001b[33m2022-08-03\u001b[39m\u001b[33m'\u001b[39m, \n\u001b[32m      5\u001b[39m     end=\u001b[33m'\u001b[39m\u001b[33m2023-08-10\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m      6\u001b[39m     )\n\u001b[32m      7\u001b[39m microsoft\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'yfinance'"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th>Price</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>Volume</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ticker</th>\n",
-       "      <th>MSFT</th>\n",
-       "      <th>MSFT</th>\n",
-       "      <th>MSFT</th>\n",
-       "      <th>MSFT</th>\n",
-       "      <th>MSFT</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2022-08-03</th>\n",
-       "      <td>277.094757</td>\n",
-       "      <td>278.105156</td>\n",
-       "      <td>271.346254</td>\n",
-       "      <td>271.493424</td>\n",
-       "      <td>23518900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-08-04</th>\n",
-       "      <td>278.252289</td>\n",
-       "      <td>278.399428</td>\n",
-       "      <td>274.838530</td>\n",
-       "      <td>276.437487</td>\n",
-       "      <td>18098700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-08-05</th>\n",
-       "      <td>277.526398</td>\n",
-       "      <td>278.252306</td>\n",
-       "      <td>273.376881</td>\n",
-       "      <td>273.837939</td>\n",
-       "      <td>16774600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-08-08</th>\n",
-       "      <td>274.985687</td>\n",
-       "      <td>280.479129</td>\n",
-       "      <td>274.004717</td>\n",
-       "      <td>278.644688</td>\n",
-       "      <td>18739200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-08-09</th>\n",
-       "      <td>276.928009</td>\n",
-       "      <td>277.693165</td>\n",
-       "      <td>272.327254</td>\n",
-       "      <td>274.318653</td>\n",
-       "      <td>23405200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-08-03</th>\n",
-       "      <td>323.541382</td>\n",
-       "      <td>326.730642</td>\n",
-       "      <td>322.838169</td>\n",
-       "      <td>322.887679</td>\n",
-       "      <td>18253700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-08-04</th>\n",
-       "      <td>324.650604</td>\n",
-       "      <td>331.940352</td>\n",
-       "      <td>324.115751</td>\n",
-       "      <td>328.711467</td>\n",
-       "      <td>23727700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-08-07</th>\n",
-       "      <td>326.958405</td>\n",
-       "      <td>327.948857</td>\n",
-       "      <td>324.393135</td>\n",
-       "      <td>325.235026</td>\n",
-       "      <td>17741500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-08-08</th>\n",
-       "      <td>322.937164</td>\n",
-       "      <td>325.611399</td>\n",
-       "      <td>319.916295</td>\n",
-       "      <td>323.838480</td>\n",
-       "      <td>22327600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-08-09</th>\n",
-       "      <td>319.153625</td>\n",
-       "      <td>323.987010</td>\n",
-       "      <td>317.984868</td>\n",
-       "      <td>323.353136</td>\n",
-       "      <td>22373300</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>256 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Price            Close        High         Low        Open    Volume\n",
-       "Ticker            MSFT        MSFT        MSFT        MSFT      MSFT\n",
-       "Date                                                                \n",
-       "2022-08-03  277.094757  278.105156  271.346254  271.493424  23518900\n",
-       "2022-08-04  278.252289  278.399428  274.838530  276.437487  18098700\n",
-       "2022-08-05  277.526398  278.252306  273.376881  273.837939  16774600\n",
-       "2022-08-08  274.985687  280.479129  274.004717  278.644688  18739200\n",
-       "2022-08-09  276.928009  277.693165  272.327254  274.318653  23405200\n",
-       "...                ...         ...         ...         ...       ...\n",
-       "2023-08-03  323.541382  326.730642  322.838169  322.887679  18253700\n",
-       "2023-08-04  324.650604  331.940352  324.115751  328.711467  23727700\n",
-       "2023-08-07  326.958405  327.948857  324.393135  325.235026  17741500\n",
-       "2023-08-08  322.937164  325.611399  319.916295  323.838480  22327600\n",
-       "2023-08-09  319.153625  323.987010  317.984868  323.353136  22373300\n",
-       "\n",
-       "[256 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -794,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4
  },
