--- a/Workspace.ipynb
+++ b/Workspace.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,10 +45,404 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/codespace/.local/lib/python3.12/site-packages/yfinance/scrapers/fundamentals.py:33: DeprecationWarning: 'Ticker.earnings' is deprecated as not available via API. Look for \"Net Income\" in Ticker.income_stmt.\n",
+      "  warnings.warn(\"'Ticker.earnings' is deprecated as not available via API. Look for \\\"Net Income\\\" in Ticker.income_stmt.\", DeprecationWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1988-01-29 00:00:00+11:00</th>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1988-02-01 00:00:00+11:00</th>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1988-02-02 00:00:00+11:00</th>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1988-02-03 00:00:00+11:00</th>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1988-02-04 00:00:00+11:00</th>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0.561668</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-20 00:00:00+11:00</th>\n",
+       "      <td>24.120001</td>\n",
+       "      <td>24.480000</td>\n",
+       "      <td>23.650000</td>\n",
+       "      <td>24.480000</td>\n",
+       "      <td>2005707</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-21 00:00:00+11:00</th>\n",
+       "      <td>24.299999</td>\n",
+       "      <td>24.410000</td>\n",
+       "      <td>23.709999</td>\n",
+       "      <td>24.080000</td>\n",
+       "      <td>4608896</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-24 00:00:00+11:00</th>\n",
+       "      <td>23.879999</td>\n",
+       "      <td>24.549999</td>\n",
+       "      <td>23.760000</td>\n",
+       "      <td>24.080000</td>\n",
+       "      <td>687106</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-25 00:00:00+11:00</th>\n",
+       "      <td>24.250000</td>\n",
+       "      <td>24.400000</td>\n",
+       "      <td>23.660000</td>\n",
+       "      <td>23.940001</td>\n",
+       "      <td>1210833</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-26 00:00:00+11:00</th>\n",
+       "      <td>23.860001</td>\n",
+       "      <td>24.200001</td>\n",
+       "      <td>23.690001</td>\n",
+       "      <td>23.760000</td>\n",
+       "      <td>767092</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9531 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Open       High        Low      Close  \\\n",
+       "Date                                                                    \n",
+       "1988-01-29 00:00:00+11:00   0.561668   0.561668   0.561668   0.561668   \n",
+       "1988-02-01 00:00:00+11:00   0.561668   0.561668   0.561668   0.561668   \n",
+       "1988-02-02 00:00:00+11:00   0.561668   0.561668   0.561668   0.561668   \n",
+       "1988-02-03 00:00:00+11:00   0.561668   0.561668   0.561668   0.561668   \n",
+       "1988-02-04 00:00:00+11:00   0.561668   0.561668   0.561668   0.561668   \n",
+       "...                              ...        ...        ...        ...   \n",
+       "2025-03-20 00:00:00+11:00  24.120001  24.480000  23.650000  24.480000   \n",
+       "2025-03-21 00:00:00+11:00  24.299999  24.410000  23.709999  24.080000   \n",
+       "2025-03-24 00:00:00+11:00  23.879999  24.549999  23.760000  24.080000   \n",
+       "2025-03-25 00:00:00+11:00  24.250000  24.400000  23.660000  23.940001   \n",
+       "2025-03-26 00:00:00+11:00  23.860001  24.200001  23.690001  23.760000   \n",
+       "\n",
+       "                            Volume  Dividends  Stock Splits  \n",
+       "Date                                                         \n",
+       "1988-01-29 00:00:00+11:00        0        0.0           0.0  \n",
+       "1988-02-01 00:00:00+11:00        0        0.0           0.0  \n",
+       "1988-02-02 00:00:00+11:00        0        0.0           0.0  \n",
+       "1988-02-03 00:00:00+11:00        0        0.0           0.0  \n",
+       "1988-02-04 00:00:00+11:00        0        0.0           0.0  \n",
+       "...                            ...        ...           ...  \n",
+       "2025-03-20 00:00:00+11:00  2005707        0.0           0.0  \n",
+       "2025-03-21 00:00:00+11:00  4608896        0.0           0.0  \n",
+       "2025-03-24 00:00:00+11:00   687106        0.0           0.0  \n",
+       "2025-03-25 00:00:00+11:00  1210833        0.0           0.0  \n",
+       "2025-03-26 00:00:00+11:00   767092        0.0           0.0  \n",
+       "\n",
+       "[9531 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Pick company\n",
+    "\n",
+    "ticker = input(\"Enter the ticker of the company you want to analyse: \")\n",
+    "company = yf.Ticker(ticker)\n",
+    "company_info = company.info\n",
+    "company_info\n",
+    "\n",
+    "# Financials\n",
+    "financials = company.financials\n",
+    "financials\n",
+    "\n",
+    "# Balance Sheet\n",
+    "balance_sheet = company.balance_sheet\n",
+    "balance_sheet\n",
+    "\n",
+    "#Cash Flow\n",
+    "cash_flow = company.cashflow\n",
+    "cash_flow\n",
+    "\n",
+    "# Earnings\n",
+    "earnings = company.earnings\n",
+    "earnings\n",
+    "\n",
+    "# Sustainability\n",
+    "sustainability = company.sustainability\n",
+    "sustainability\n",
+    "\n",
+    "# Options\n",
+    "\n",
+    "options = company.options\n",
+    "options\n",
+    "\n",
+    "# Dividends\n",
+    "\n",
+    "dividends = company.dividends\n",
+    "dividends\n",
+    "\n",
+    "# Actions\n",
+    "\n",
+    "actions = company.actions\n",
+    "actions\n",
+    "\n",
+    "# Major Holders\n",
+    "\n",
+    "major_holders = company.major_holders\n",
+    "major_holders\n",
+    "\n",
+    "# Institutional Holders\n",
+    "\n",
+    "institutional_holders = company.institutional_holders\n",
+    "institutional_holders\n",
+    "\n",
+    "# Analysis\n",
+    "\n",
+    "analysis = company.recommendations\n",
+    "analysis\n",
+    "\n",
+    "# Calendar\n",
+    "\n",
+    "calendar = company.calendar\n",
+    "calendar \n",
+    "\n",
+    "# History\n",
+    "\n",
+    "history = company.history(period=\"max\")\n",
+    "history\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'my_financial_functions'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mfpdf\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmy_financial_functions\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m calculate_pe_ratio, calculate_dividend_yield, calculate_eps, calculate_roa  \u001b[38;5;66;03m# Import your custom functions\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Create a PDF\u001b[39;00m\n\u001b[32m      5\u001b[39m pdf = fpdf.FPDF(\u001b[38;5;28mformat\u001b[39m=\u001b[33m'\u001b[39m\u001b[33mletter\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'my_financial_functions'"
+     ]
+    }
+   ],
+   "source": [
+    "import fpdf\n",
+    "from my_financial_functions import calculate_pe_ratio, calculate_dividend_yield, calculate_eps, calculate_roa  # Import your custom functions\n",
+    "\n",
+    "# Create a PDF\n",
+    "pdf = fpdf.FPDF(format='letter')\n",
+    "pdf.add_page()\n",
+    "pdf.set_font(\"Arial\", size=12)\n",
+    "\n",
+    "# Title\n",
+    "pdf.cell(200, 20, txt=\"EQUITY REPORT\", ln=True, align=\"C\")\n",
+    "\n",
+    "# Key Ratios Section\n",
+    "pdf.cell(200, 10, txt=\"Key Ratios\", ln=True, align=\"C\")\n",
+    "\n",
+    "try:\n",
+    "    # P/E Ratio\n",
+    "    pe_ratio = calculate_pe_ratio(earnings.get(\"Net Income\", 0), earnings.get(\"Shares Outstanding\", 0))\n",
+    "    pdf.cell(200, 10, txt=f\"P/E Ratio: {pe_ratio}\", ln=True, align=\"L\")\n",
+    "except Exception as e:\n",
+    "    pdf.cell(200, 10, txt=f\"P/E Ratio: Error ({e})\", ln=True, align=\"L\")\n",
+    "\n",
+    "try:\n",
+    "    # Dividend Yield\n",
+    "    dividend_yield = calculate_dividend_yield(dividends.get(\"Dividends\", 0), history[\"Close\"].iloc[-1])\n",
+    "    pdf.cell(200, 10, txt=f\"Dividend Yield: {dividend_yield}\", ln=True, align=\"L\")\n",
+    "except Exception as e:\n",
+    "    pdf.cell(200, 10, txt=f\"Dividend Yield: Error ({e})\", ln=True, align=\"L\")\n",
+    "\n",
+    "try:\n",
+    "    # Earnings per Share\n",
+    "    eps = calculate_eps(earnings.get(\"Net Income\", 0), earnings.get(\"Shares Outstanding\", 0))\n",
+    "    pdf.cell(200, 10, txt=f\"Earnings per Share: {eps}\", ln=True, align=\"L\")\n",
+    "except Exception as e:\n",
+    "    pdf.cell(200, 10, txt=f\"Earnings per Share: Error ({e})\", ln=True, align=\"L\")\n",
+    "\n",
+    "try:\n",
+    "    # Return on Assets\n",
+    "    roa = calculate_roa(earnings.get(\"Net Income\", 0), balance_sheet.get(\"Total Assets\", 0))\n",
+    "    pdf.cell(200, 10, txt=f\"Return on Assets: {roa}\", ln=True, align=\"L\")\n",
+    "except Exception as e:\n",
+    "    pdf.cell(200, 10, txt=f\"Return on Assets: Error ({e})\", ln=True, align=\"L\")\n",
+    "\n",
+    "# Financial Metrics Section\n",
+    "pdf.cell(200, 10, txt=\"Financial Metrics\", ln=True, align=\"C\")\n",
+    "\n",
+    "try:\n",
+    "    # Net Income\n",
+    "    net_income = earnings.get(\"Net Income\", \"N/A\")\n",
+    "    pdf.cell(200, 10, txt=f\"Net Income: {net_income}\", ln=True, align=\"L\")\n",
+    "except Exception as e:\n",
+    "    pdf.cell(200, 10, txt=f\"Net Income: Error ({e})\", ln=True, align=\"L\")\n",
+    "\n",
+    "try:\n",
+    "    # Total Assets\n",
+    "    total_assets = balance_sheet.get(\"Total Assets\", \"N/A\")\n",
+    "    pdf.cell(200, 10, txt=f\"Total Assets: {total_assets}\", ln=True, align=\"L\")\n",
+    "except Exception as e:\n",
+    "    pdf.cell(200, 10, txt=f\"Total Assets: Error ({e})\", ln=True, align=\"L\")\n",
+    "\n",
+    "try:\n",
+    "    # Shares Outstanding\n",
+    "    shares_outstanding = earnings.get(\"Shares Outstanding\", \"N/A\")\n",
+    "    pdf.cell(200, 10, txt=f\"Shares Outstanding: {shares_outstanding}\", ln=True, align=\"L\")\n",
+    "except Exception as e:\n",
+    "    pdf.cell(200, 10, txt=f\"Shares Outstanding: Error ({e})\", ln=True, align=\"L\")\n",
+    "\n",
+    "try:\n",
+    "    # Dividends\n",
+    "    dividends_value = dividends.get(\"Dividends\", \"N/A\")\n",
+    "    pdf.cell(200, 10, txt=f\"Dividends: {dividends_value}\", ln=True, align=\"L\")\n",
+    "except Exception as e:\n",
+    "    pdf.cell(200, 10, txt=f\"Dividends: Error ({e})\", ln=True, align=\"L\")\n",
+    "\n",
+    "try:\n",
+    "    # Close Price\n",
+    "    close_price = history[\"Close\"].iloc[-1]\n",
+    "    pdf.cell(200, 10, txt=f\"Close Price: {close_price}\", ln=True, align=\"L\")\n",
+    "except Exception as e:\n",
+    "    pdf.cell(200, 10, txt=f\"Close Price: Error ({e})\", ln=True, align=\"L\")\n",
+    "\n",
+    "# Save the PDF\n",
+    "try:\n",
+    "    pdf.output(\"Company Analysis.pdf\")\n",
+    "    print(\"PDF successfully created: Company Analysis.pdf\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error saving PDF: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
