--- a/price.history.ipynb
+++ b/price.history.ipynb
@@ -2,61 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce050a62dc724f52bf8c9f865350b59c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Text(value='MSFT', description='Ticker:'), Text(value='2022-08-03', description='Start D…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.plot_stock(ticker, start_date, end_date)>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import yfinance as yf\n",
-    "import ipywidgets as widgets\n",
     "\n",
-    "def plot_stock(ticker, start_date, end_date):\n",
-    "    # Download the stock data for the given ticker and date range\n",
+    "def generate_stock_plot(ticker, start_date, end_date, output_filename):\n",
+    "\n",
+    "    # Download the stock data using yfinance API\n",
     "    data = yf.download(ticker, start=start_date, end=end_date)\n",
     "    \n",
     "    if data.empty:\n",
-    "        print(\"No data found for ticker:\", ticker)\n",
-    "        return\n",
+    "        raise ValueError(f\"No data found for ticker: {ticker}\")\n",
+    "    \n",
+    "    # Create a new figure and axis for plotting\n",
+    "    fig, ax = plt.subplots(figsize=(10, 5))\n",
     "    \n",
     "    # Plot the closing price history\n",
-    "    data['Close'].plot(title=f\"{ticker} Price History\")\n",
-    "    plt.xlabel(\"Date\")\n",
-    "    plt.ylabel(\"Price\")\n",
-    "    plt.show()\n",
-    "\n",
-    "# Create widgets for interactive input\n",
-    "ticker_widget = widgets.Text(value='MSFT', description='Ticker:')\n",
-    "start_widget = widgets.Text(value='2022-08-03', description='Start Date:')\n",
-    "end_widget = widgets.Text(value='2023-08-10', description='End Date:')\n",
-    "\n",
-    "# Use interact to update the plot based on widget input\n",
-    "widgets.interact(plot_stock, ticker=ticker_widget, start_date=start_widget, end_date=end_widget)"
+    "    ax.plot(data.index, data['Close'], label='Close Price')\n",
+    "    ax.set_title(f\"{ticker} Price History\")\n",
+    "    ax.set_xlabel(\"Date\")\n",
+    "    ax.set_ylabel(\"Price\")\n",
+    "    ax.legend()\n",
+    "    \n",
+    "    return fig\n"
    ]
   }
  ],
