--- a/draft_coide.ipynb
+++ b/draft_coide.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "testing\n"
+      "this is to test the fact I have made chnages to the file\n"
      ]
     }
    ],
    "source": [
-    "print(\"testing\")"
+    "print(\"this is to test the fact I have made chnages to the file\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -30,9 +30,7 @@
      ]
     }
    ],
-   "source": [
-    "print(\"hello\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
