--- a/analyst_report.ipynb
+++ b/analyst_report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 83,
    "id": "d41beecc",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3168395103.py:10: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3252135944.py:10: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
       "  pdf.set_font('Arial', 'B', 16)\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3168395103.py:13: DeprecationWarning: The parameter \"txt\" has been renamed to \"text\" in 2.7.6\n",
-      "  pdf.cell(0, 10, txt='Vault Minerals Equity Research Report', ln=True, align='C')\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3168395103.py:13: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=True use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
-      "  pdf.cell(0, 10, txt='Vault Minerals Equity Research Report', ln=True, align='C')\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3168395103.py:21: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3252135944.py:16: DeprecationWarning: The parameter \"txt\" has been renamed to \"text\" in 2.7.6\n",
+      "  pdf.cell(0, 10, txt=f'{company_name} ({ticker}) Equity Research Report', ln=True, align='C')\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3252135944.py:16: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=True use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
+      "  pdf.cell(0, 10, txt=f'{company_name} ({ticker}) Equity Research Report', ln=True, align='C')\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3252135944.py:25: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
       "  pdf.set_font('Arial', 'B', 12)\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3168395103.py:24: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=1 use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
-      "  pdf.cell(0, 10, 'Presented by: Lawrence Chen, Harris Zhong, Baran Esmaeili, George Scanlan', 0, 1,)\n"
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3252135944.py:28: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=1 use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
+      "  pdf.cell(0, 10, 'Presented by: Lawrence Chen, Harris Zhong, Baran Esmaeili, George Scanlan', 0, 1,)\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3252135944.py:30: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
+      "  pdf.set_font('Arial', '', 10)\n"
      ]
     }
    ],
@@ -36,7 +38,11 @@
     "pdf.set_font('Arial', 'B', 16)\n",
     "\n",
     "# Centered title\n",
-    "pdf.cell(0, 10, txt='Vault Minerals Equity Research Report', ln=True, align='C')\n",
+    "ticker = 'VAU'\n",
+    "company_name = 'Vault Minerals'\n",
+    "\n",
+    "pdf.cell(0, 10, txt=f'{company_name} ({ticker}) Equity Research Report', ln=True, align='C')\n",
+    "\n",
     "\n",
     "# Save the PDF\n",
     "#pdf.output('equity_research_VAU.pdf')\n",
@@ -49,15 +55,12 @@
     "# 1. Using Cell - creates a rectangular area for text with optional borders\n",
     "pdf.cell(0, 10, 'Presented by: Lawrence Chen, Harris Zhong, Baran Esmaeili, George Scanlan', 0, 1,)\n",
     "\n",
+    "pdf.set_font('Arial', '', 10)\n",
+    "\n",
     "# 2. Using MultiCell - allows text to wrap and span multiple lines\n",
-    "pdf.multi_cell(0, 10, 'This text will wrap automatically when it reaches the end of the line. ' * 5)\n",
+    "pdf.write(4, 'This equity research report will cover Vault Minerals and a recommendation will be provided based on a valuation model. ')\n",
     "\n",
-    "# 3. Using Write - continues on the same line without creating a cell\n",
-    "pdf.write(10, 'This text is written with the write method. ')\n",
-    "pdf.write(10, 'This continues on the same line.')\n",
     "\n",
-    "# 4. Using Text - places text at specific coordinates\n",
-    "pdf.text(10, 120, 'This text is placed at coordinates (10, 120)')\n",
     "\n",
     "pdf.output('equity_research_VAU.pdf')\n",
     "\n"
