--- a/analyst_report.ipynb
+++ b/analyst_report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 92,
    "id": "d41beecc",
    "metadata": {},
    "outputs": [
@@ -10,17 +10,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3252135944.py:10: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\232889296.py:10: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
       "  pdf.set_font('Arial', 'B', 16)\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3252135944.py:16: DeprecationWarning: The parameter \"txt\" has been renamed to \"text\" in 2.7.6\n",
-      "  pdf.cell(0, 10, txt=f'{company_name} ({ticker}) Equity Research Report', ln=True, align='C')\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3252135944.py:16: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=True use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
-      "  pdf.cell(0, 10, txt=f'{company_name} ({ticker}) Equity Research Report', ln=True, align='C')\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3252135944.py:25: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\232889296.py:19: DeprecationWarning: The parameter \"txt\" has been renamed to \"text\" in 2.7.6\n",
+      "  pdf.cell(0, 10, txt=f'{company_name} ({TICKER}) Equity Research Report', ln=True, align='C')\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\232889296.py:19: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=True use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
+      "  pdf.cell(0, 10, txt=f'{company_name} ({TICKER}) Equity Research Report', ln=True, align='C')\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\232889296.py:27: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
       "  pdf.set_font('Arial', 'B', 12)\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3252135944.py:28: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=1 use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\232889296.py:30: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=1 use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
       "  pdf.cell(0, 10, 'Presented by: Lawrence Chen, Harris Zhong, Baran Esmaeili, George Scanlan', 0, 1,)\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\3252135944.py:30: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\232889296.py:32: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
       "  pdf.set_font('Arial', '', 10)\n"
      ]
     }
@@ -38,14 +38,16 @@
     "pdf.set_font('Arial', 'B', 16)\n",
     "\n",
     "# Centered title\n",
-    "ticker = 'VAU'\n",
+    "import yfinance as yf\n",
+    "\n",
+    "TICKER = \"VAU.AX\" # Replace with your stock ticker\n",
     "company_name = 'Vault Minerals'\n",
     "\n",
-    "pdf.cell(0, 10, txt=f'{company_name} ({ticker}) Equity Research Report', ln=True, align='C')\n",
+    "#stock = yf.Ticker(TICKER)\n",
+    "pdf.cell(0, 10, txt=f'{company_name} ({TICKER}) Equity Research Report', ln=True, align='C')\n",
     "\n",
     "\n",
     "# Save the PDF\n",
-    "#pdf.output('equity_research_VAU.pdf')\n",
     "\n",
     "#Write our names\n",
     "#pdf = FPDF()\n",
