--- a/analyst_report.ipynb
+++ b/analyst_report.ipynb
@@ -2,27 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "id": "d41beecc",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\232889296.py:10: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
-      "  pdf.set_font('Arial', 'B', 16)\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\232889296.py:19: DeprecationWarning: The parameter \"txt\" has been renamed to \"text\" in 2.7.6\n",
-      "  pdf.cell(0, 10, txt=f'{company_name} ({TICKER}) Equity Research Report', ln=True, align='C')\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\232889296.py:19: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=True use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
-      "  pdf.cell(0, 10, txt=f'{company_name} ({TICKER}) Equity Research Report', ln=True, align='C')\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\232889296.py:27: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
-      "  pdf.set_font('Arial', 'B', 12)\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\232889296.py:30: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=1 use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
-      "  pdf.cell(0, 10, 'Presented by: Lawrence Chen, Harris Zhong, Baran Esmaeili, George Scanlan', 0, 1,)\n",
-      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_17696\\232889296.py:32: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
-      "  pdf.set_font('Arial', '', 10)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -46,6 +38,18 @@
     "#stock = yf.Ticker(TICKER)\n",
     "pdf.cell(0, 10, txt=f'{company_name} ({TICKER}) Equity Research Report', ln=True, align='C')\n",
     "\n",
+    "#Adding Image\n",
+    "from fpdf import FPDF\n",
+    "import os\n",
+    "\n",
+    "# Add an image (replace 'example.jpg' with an actual image file path)\n",
+    "sample_image = 'VM_Image.jpg'\n",
+    "if os.path.exists(sample_image):\n",
+    "    pdf.image(sample_image, x=25, y=40, w=150)\n",
+    "    pdf.ln(100)  # Leave space after the image\n",
+    "else:\n",
+    "    pdf.cell(0, 10, 'Image example (image file not found)', 0, 1)\n",
+    "    pdf.cell(0, 10, 'Replace \"example.jpg\" with your image path', 0, 1)\n",
     "\n",
     "# Save the PDF\n",
     "\n",
@@ -71,9 +75,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.13.3",
    "language": "python",
-   "name": "python3"
+   "name": "py313"
   },
   "language_info": {
    "codemirror_mode": {
