Added stock graph to report

--- a/fpdf_instructions/1_mechanics.ipynb
+++ b/fpdf_instructions/1_mechanics.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lawre\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\fpdf\\__init__.py:40: UserWarning: You have both PyFPDF & fpdf2 installed. Both packages cannot be installed at the same time as they share the same module namespace. To only keep fpdf2, run: pip uninstall --yes pypdf && pip install --upgrade fpdf2\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the FPDF library\n",
     "from fpdf import FPDF"
@@ -34,9 +43,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial position - X: 9.999999999999998, Y: 9.999999999999998\n",
+      "After first cell - X: 50.0, Y: 9.999999999999998\n",
+      "After second cell - X: 9.999999999999998, Y: 20.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_23528\\154933786.py:4: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
+      "  pdf.set_font('Arial', '', 12)\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_23528\\154933786.py:14: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=1 use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
+      "  pdf.cell(60, 10, 'Second cell', 0, 1,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Demonstrate cursor movement\n",
     "pdf = FPDF()\n",
@@ -51,8 +80,9 @@
     "print(f\"After first cell - X: {pdf.get_x()}, Y: {pdf.get_y()}\")\n",
     "\n",
     "# Add cell that moves to next line (ln=1)\n",
-    "pdf.cell(60, 10, 'Second cell', 0, 1)\n",
+    "pdf.cell(60, 10, 'Second cell', 0, 1,)\n",
     "print(f\"After second cell - X: {pdf.get_x()}, Y: {pdf.get_y()}\")\n",
+    "\n",
     "\n",
     "pdf.output('cursor_movement.pdf')"
    ]
@@ -232,7 +262,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_23528\\2200592580.py:3: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
+      "  pdf.set_font('Arial', '', 12)\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_23528\\2200592580.py:9: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
+      "  pdf.set_font('Arial', 'B', 12)\n"
+     ]
+    }
+   ],
    "source": [
     "pdf = FPDF()\n",
     "pdf.add_page()\n",
@@ -467,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
