--- a/fpdf_instructions/2_quick_guide.ipynb
+++ b/fpdf_instructions/2_quick_guide.ipynb
@@ -112,18 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_9844\\2549342694.py:5: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
+      "  pdf.set_font('Arial', '', 12)\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_9844\\2549342694.py:8: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=1 use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
+      "  pdf.cell(20, 100, 'Text using cell method', 0, 1, 'C')\n"
+     ]
     }
    ],
    "source": [
@@ -134,17 +134,17 @@
     "pdf.set_font('Arial', '', 12)\n",
     "\n",
     "# 1. Using Cell - creates a rectangular area for text with optional borders\n",
-    "pdf.cell(200, 10, 'Text using cell method', 0, 1, 'C')\n",
+    "pdf.cell(20, 100, 'Text using cell method', 0, 1, 'C')\n",
     "\n",
     "# 2. Using MultiCell - allows text to wrap and span multiple lines\n",
-    "pdf.multi_cell(0, 10, 'This text will wrap automatically when it reaches the end of the line. ' * 5)\n",
+    "pdf.multi_cell(0, 100, 'This text will wrap automatically when it reaches the end of the line. ' * 5)\n",
     "\n",
     "# 3. Using Write - continues on the same line without creating a cell\n",
-    "pdf.write(10, 'This text is written with the write method. ')\n",
-    "pdf.write(10, 'This continues on the same line.')\n",
+    "pdf.write(100, 'This text is written with the write method. ')\n",
+    "pdf.write(100, 'This continues on the same line.')\n",
     "\n",
     "# 4. Using Text - places text at specific coordinates\n",
-    "pdf.text(10, 120, 'This text is placed at coordinates (10, 120)')\n",
+    "pdf.text(100, 180, 'This text is placed at coordinates (100, 180)')\n",
     "\n",
     "pdf.output('text_methods.pdf')"
    ]
@@ -240,18 +240,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_9844\\2458904106.py:6: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
+      "  pdf.set_font('Arial', 'B', 16)\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_9844\\2458904106.py:7: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=1 use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
+      "  pdf.cell(0, 50, 'Images Demo', 0, 1, 'C')\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_9844\\2458904106.py:15: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=1 use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
+      "  pdf.cell(0, 10, 'Image added successfully', 0, 1)\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_9844\\2458904106.py:21: DeprecationWarning: Substituting font arial by core font helvetica - This is deprecated since v2.7.8, and will soon be removed\n",
+      "  pdf.set_font('Arial', '', 12)\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_9844\\2458904106.py:22: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=1 use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
+      "  pdf.cell(0, 10, 'Image parameters:', 0, 1)\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_9844\\2458904106.py:23: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=1 use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
+      "  pdf.cell(0, 10, '- x, y: Position coordinates', 0, 1)\n",
+      "C:\\Users\\lawre\\AppData\\Local\\Temp\\ipykernel_9844\\2458904106.py:24: DeprecationWarning: The parameter \"ln\" is deprecated since v2.5.2. Instead of ln=1 use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
+      "  pdf.cell(0, 10, '- w, h: Width and height (omit one to maintain aspect ratio)', 0, 1)\n"
+     ]
     }
    ],
    "source": [
@@ -504,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
