--- a/Assignment Code/FPDF.ipynb
+++ b/Assignment Code/FPDF.ipynb
@@ -1,8 +1,123 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b9f14081",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PDF Report created successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Required Libraries\n",
+    "from fpdf import FPDF\n",
+    "import os\n",
+    "\n",
+    "# --- File Paths ---\n",
+    "png_logo_path = \"Image_Scrape/viva_energy_logo_converted.png\"  # Converted PNG path\n",
+    "\n",
+    "# --- Load Commentary from .txt file ---\n",
+    "commentary_text = \"\"\n",
+    "with open(\"Commentary.txt\", \"r\", encoding=\"utf-8\") as file:\n",
+    "    commentary_text = file.read()\n",
+    "\n",
+    "# --- Clean the commentary text to fix Unicode issues ---\n",
+    "commentary_text = commentary_text.replace('‘', \"'\").replace('’', \"'\")\n",
+    "commentary_text = commentary_text.replace('“', '\"').replace('”', '\"')\n",
+    "\n",
+    "# Parse basic details from the commentary\n",
+    "lines = commentary_text.split('\\n')\n",
+    "company_name = lines[1].split(\":\")[1].strip()\n",
+    "ticker = lines[2].split(\":\")[1].strip()\n",
+    "sector = lines[3].split(\":\")[1].strip()\n",
+    "date = lines[4].split(\":\")[1].strip()\n",
+    "\n",
+    "# --- Create PDF ---\n",
+    "pdf = FPDF(orientation='P', unit='mm', format='A4')\n",
+    "pdf.add_page()\n",
+    "\n",
+    "# --- Add Header Background (Extended Height) ---\n",
+    "pdf.set_fill_color(80, 80, 80)  # Lighter grey\n",
+    "pdf.rect(0, 0, 210, 40, 'F')  # Height extended from 30 → 40\n",
+    "\n",
+    "# --- Insert Viva Energy Logo ---\n",
+    "if os.path.exists(png_logo_path):\n",
+    "    pdf.image(png_logo_path, x=160, y=5, w=40)  # Keep logo size and position\n",
+    "else:\n",
+    "    print(\"Warning: Logo PNG not found!\")\n",
+    "\n",
+    "# --- Header Text Setup (Left side, Larger Font) ---\n",
+    "pdf.set_text_color(255, 255, 255)  # White text\n",
+    "\n",
+    "pdf.set_font('Arial', '', 13)\n",
+    "pdf.set_xy(10, 10)\n",
+    "pdf.cell(0, 5, f\"{date}\", ln=True)\n",
+    "\n",
+    "pdf.set_font('Arial', 'B', 17)  # Increased size\n",
+    "pdf.set_x(10)\n",
+    "pdf.cell(0, 8, f\"{company_name} ({ticker})\", ln=True)\n",
+    "\n",
+    "pdf.set_font('Arial', 'I', 13)\n",
+    "pdf.set_x(10)\n",
+    "pdf.cell(0, 5, \"'Emerging stronger amid energy sector volatility'\", ln=True)\n",
+    "\n",
+    "# --- Sector + Exchange Info (Shifted down to fit better under logo) ---\n",
+    "pdf.set_font('Arial', '', 8)\n",
+    "pdf.set_xy(160, 30)  # Lowered from y=20 → y=30\n",
+    "pdf.cell(0, 4, f\"GICS Sector: {sector}\", ln=True)\n",
+    "pdf.set_x(160)\n",
+    "pdf.cell(0, 4, \"Australian Securities Exchange (ASX)\", ln=True)\n",
+    "\n",
+    "# --- Recommendation Section ---\n",
+    "pdf.ln(12)  # Extra spacing after header block\n",
+    "pdf.set_text_color(0, 0, 0)\n",
+    "pdf.set_font('Arial', '', 12)\n",
+    "pdf.cell(45, 10, 'RECOMMENDATION:', ln=False)\n",
+    "\n",
+    "pdf.set_text_color(0, 200, 0)\n",
+    "pdf.set_font('Arial', 'B', 12)\n",
+    "pdf.cell(0, 10, 'BUY', ln=True)\n",
+    "\n",
+    "# --- Executive Summary Heading ---\n",
+    "pdf.set_text_color(0, 51, 102)  # Dark blue\n",
+    "pdf.set_font('Arial', 'B', 14)\n",
+    "pdf.cell(0, 10, 'EXECUTIVE SUMMARY', ln=True)\n",
+    "\n",
+    "# --- Commentary Body Text ---\n",
+    "pdf.set_text_color(0, 0, 0)\n",
+    "pdf.set_font('Arial', '', 11)\n",
+    "pdf.multi_cell(0, 8, '\\n'.join(lines[5:]))\n",
+    "\n",
+    "# --- Output Final PDF ---\n",
+    "pdf.output('viva_energy_equity_report.pdf')\n",
+    "\n",
+    "print(\"PDF Report created successfully!\")\n"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
